Add isDraftAccessLevel method to access-level-service

--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -116,6 +116,7 @@
           <Documents::DocumentBadgeList
             @pieces={{this.limitedAgendaitemDocuments}}
             @highlightedPieces={{this.newAgendaitemDocuments}}
+            @agendaContext={{hash meeting=@meeting agenda=@currentAgenda agendaitem=@agendaitem}}
           />
         </div>
         {{#if this.enableShowMore}}
