--- a/app/templates/agenda/agendaitems/agendaitem/decisions.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/decisions.hbs
@@ -10,5 +10,6 @@
 <div class="auk-u-mb-2">
   <Agenda::Agendaitem::AgendaitemDecision
     @decisionActivity={{this.model}}
+    @agendaContext={{hash meeting=this.meeting agenda=this.agenda agendaitem=this.agendaitem}}
   />
 </div>
