--- a/app/components/documents/document-badge-list.hbs
+++ b/app/components/documents/document-badge-list.hbs
@@ -6,8 +6,8 @@ as |documents|>
       <li class="vlc-document-list__item">
         <Documents::DocumentBadge
           @doc={{doc}}
-          @accessLevel={{await doc.accessLevel}}
           @isShowingAccessLevel={{this.shouldShowAccessLevel (await doc.accessLevel)}}
+          @agendaContext={{@agendaContext}}
           @isHighlighted={{includes doc @highlightedPieces}}
         />
       </li>
