--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -3,6 +3,7 @@
     <div class="auk-u-mb-2">
       <Documents::DocumentCard
         @piece={{doc}}
+        @agendaContext={{@agendaContext}}
         @isHighlighted={{includes doc @highlightedPieces}}
         @hideNewerVersions={{false}}
         @didDeleteContainer={{@didDeleteContainer}}
