--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -39,6 +39,7 @@
     <Documents::DocumentCardList
       @pieces={{this.model.pieces}}
       @highlightedPieces={{this.newAgendaitemPieces}}
+      @agendaContext={{hash meeting=this.meeting agenda=this.currentAgenda agendaitem=this.agendaitem}}
       @onOpenUploadModal={{perform this.ensureFreshData}}
       @onAddPiece={{perform this.addPiece}}
       @didDeleteContainer={{this.refresh}}
