KAS-1652 add waiting for task to be idle to avoid showing wrong button

--- a/app/components/agenda/agendaitem/agendaitem-postponed.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-postponed.hbs
@@ -7,7 +7,7 @@
       </p>
     </div>
   </div>
-  {{#if @meeting.internalDecisionPublicationActivity.startDate}}
+  {{#if (and @meeting.internalDecisionPublicationActivity.startDate this.loadProposedStatus.isIdle)}}
     {{#if this.modelsForProposedAgenda}}
       <Auk::Button
         @skin="primary"
