KAS-3594 replace all AuLink with href to AuLinkExternal

--- a/app/components/documents/batch-details/document-details-row.hbs
+++ b/app/components/documents/batch-details/document-details-row.hbs
@@ -53,11 +53,10 @@
   <td>
     <WebComponents::AuButtonToolbar>
       {{#if (not @isEditingEnabled)}}
-        <AuLink
-          @skin="button-naked"
+        <AuLinkExternal
           @icon="book"
           @hideText={{true}}
-          @href={{@row.piece.viewDocumentURL}}
+          href={{@row.piece.viewDocumentURL}}
           target="_blank"
         />
       {{else if @row.isToBeDeleted}}
