--- a/app/components/utils/toaster/download-file-toast.hbs
+++ b/app/components/utils/toaster/download-file-toast.hbs
@@ -9,15 +9,15 @@
   >
     <div class="vl-alert__message auk-u-text-capitalize">
       <p>{{@message}}</p>
-      <AuLink
+      <AuLinkExternal
         @skin="button-secondary"
-        @href={{@options.downloadLink}}
+        href={{@options.downloadLink}}
         {{on "click" @options.onClose}}
         class="auk-u-mt-4"
         download
       >
         {{t "download"}}
-      </AuLink>
+      </AuLinkExternal>
     </div>
   </WebComponents::VlAlert>
 </ClickOutside>
