feat: rename primarySource(of) to source and derived

--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -10,7 +10,11 @@
       as |c|
     >
       <c.header
-        @badgeIcon={{if (eq @piece.file.extension "pdf") "pdf" "document"}}
+        @badgeIcon={{
+          if (eq @piece.file.extension "pdf") "pdf"
+          (if (eq @piece.file.extension "docx") "word"
+          "document")
+        }}
       >
         <p data-test-document-card-type class="vlc-subline au-u-medium au-u-muted">
           {{uppercase @piece.file.extension}}
@@ -48,18 +52,22 @@
         </c.content>
       {{/if}}
     </AuCard>
-    {{#if @piece.file.primarySource}}
+    {{#if @piece.file.derived}}
       <AuCard
         @flex={{true}}
         @size="small"
-        class="au-u-margin-top-small {{if this.isDeletingSourceFile 'vlc-document--deleted-state'}}"
+        class="au-u-margin-top-small {{if this.isDeletingDerivedFile 'vlc-document--deleted-state'}}"
         as |c|
       >
         <c.header
-          @badgeIcon={{if (eq @piece.file.primarySource.extension "docx") "word" "document"}}
+          @badgeIcon={{
+            if (eq @piece.file.derived.extension "pdf") "pdf"
+            (if (eq @piece.file.derived.extension "docx") "word"
+            "document")
+          }}
         >
           <p class="vlc-subline au-u-medium au-u-muted">
-            {{uppercase @piece.file.primarySource.extension}}
+            {{uppercase @piece.file.derived.extension}}
           </p>
           <div class="au-u-flex au-u-flex--between au-u-flex--spaced-small">
             <p>
@@ -69,7 +77,7 @@
               <AuButton
                 data-test-document-edit-source-file-replace
                 @skin="secondary"
-                {{on "click" this.toggleUploadReplacementSourceFile}}
+                {{on "click" this.toggleUploadReplacementDerivedFile}}
               >
                 {{t "replace"}}
               </AuButton>
@@ -79,24 +87,24 @@
                 @alert={{true}}
                 @icon="trash"
                 @hideText={{true}}
-                {{on "click" (toggle "isDeletingSourceFile" this)}}
+                {{on "click" (toggle "isDeletingDerivedFile" this)}}
               >
               </AuButton>
             </AuButtonGroup>
           </div>
-          {{#if @piece.file.primarySource.created}}
+          {{#if @piece.file.derived.created}}
             <AuHelpText @skin="secondary">
               {{t "uploaded-at"}}
-              {{moment-format @piece.file.primarySource.created}}
+              {{moment-format @piece.file.derived.created}}
               {{t "at"}}
-              {{moment-format @piece.file.primarySource.created "HH:mm"}}
+              {{moment-format @piece.file.derived.created "HH:mm"}}
             </AuHelpText>
           {{/if}}
         </c.header>
-        {{#if this.isUploadingReplacementSourceFile}}
+        {{#if this.isUploadingReplacementDerivedFile}}
           <c.content data-test-document-edit-source-file-replacer>
             <Auk::FileUploader
-              @onUpload={{set this "replacementSourceFile"}}
+              @onUpload={{set this "replacementDerivedFile"}}
             />
           </c.content>
         {{/if}}
@@ -112,12 +120,12 @@
           @badgeIcon="document"
         >
           <div class="au-u-flex au-u-flex--spaced-small">
-            <AuHeading @skin="5" @level="3">Bronbestand opladen</AuHeading>
+            <AuHeading @skin="5" @level="3">{{t "upload-derived-document"}}</AuHeading>
           </div>
         </c.header>
         <c.content data-test-document-edit-source-file-uploader>
           <Auk::FileUploader
-            @onUpload={{set this "uploadedSourceFile"}}
+            @onUpload={{set this "uploadedDerivedFile"}}
           />
         </c.content>
       </AuCard>
