--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -23,9 +23,13 @@
                 {{/unless}}
               </span>
             </div>
-            <LinkTo @route="document" @model={{this.piece.id}}
-              class="auk-h4" data-test-document-card-name-value>
-              {{this.piece.name}}{{#if this.piece.file}}.{{this.piece.file.extension}}{{/if}}
+            <LinkTo
+              @route="document"
+              @model={{this.piece.id}}
+              class="auk-h4"
+              data-test-document-card-name-value
+            >
+              {{this.piece.name}}
             </LinkTo>
             <div class="vlc-document-card-content__meta">
               {{! no piece.created in legacy data }}
@@ -177,7 +181,7 @@
                         <LinkTo @route="document" @model={{piece.id}}
                           class="auk-h4 auk-u-m-0 auk-u-mr-4 vlc-document-card-item__title-link"
                           data-test-vl-document-name>
-                          {{piece.name}}{{#if piece.file}}.{{piece.file.extension}}{{/if}}
+                          {{piece.name}}
                         </LinkTo>
                       {{else}}
                         <h6
@@ -187,7 +191,7 @@
                           <EmberTooltip @side="bottom" @tooltipClass="auk-tooltip">
                             {{t "document-not-consultable"}}
                           </EmberTooltip>
-                          {{piece.name}}{{#if piece.file}}.{{piece.file.extension}}{{/if}}
+                          {{piece.name}}
                         </h6>
                       {{/if}}
                       <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center"></div>
