chore: show extension again
If there's a derived file, show the derived extension, otherwise show
the source extension. I suspect this will break the tests because at
first render we show the source extension (because the derived file is
still in-flight).
But if it's a non-issue I will leave it as is, because checking for
the loading state of a relation is kind of annoying in Ember.

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -29,7 +29,9 @@
               class="auk-h4"
               data-test-document-card-name-value
             >
-              {{this.piece.name}}
+              {{#let (or this.piece.file.derived.extension this.piece.file.extension) as |extension|}}
+                {{this.piece.name}}.{{extension}}
+              {{/let}}
             </LinkTo>
             <div class="vlc-document-card-content__meta">
               {{! no piece.created in legacy data }}
@@ -181,7 +183,9 @@
                         <LinkTo @route="document" @model={{piece.id}}
                           class="auk-h4 auk-u-m-0 auk-u-mr-4 vlc-document-card-item__title-link"
                           data-test-vl-document-name>
-                          {{piece.name}}
+                          {{#let (or piece.file.derived.extension piece.file.extension) as |extension|}}
+                            {{piece.name}}.{{extension}}
+                          {{/let}}
                         </LinkTo>
                       {{else}}
                         <h6
