KAS-3470 refactor mandatee model and computeds, cleanup person model deprecations

--- a/app/components/mandatees/mandatee-selector.hbs
+++ b/app/components/mandatees/mandatee-selector.hbs
@@ -18,7 +18,7 @@
       @onChange={{@onSelectMandatee}}
       as |mandatee|
     >
-      {{await mandatee.fullDisplayName}}
+      {{mandatee.fullDisplayName}}
       <span class="auk-u-text-muted auk-u-text-size--small">
         {{moment-format mandatee.start}}
         {{t "until"}}
@@ -40,7 +40,7 @@
       @onChange={{@onSelectMandatee}}
       as |mandatee|
     >
-      {{await mandatee.fullDisplayName}}
+      {{mandatee.fullDisplayName}}
       <span class="auk-u-text-muted auk-u-text-size--small">
         {{moment-format mandatee.start}}
         {{t "until"}}
