feat: make DocumentCards optionally editable
Useful because the view in Subcase > Decisions should be read-only

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -28,6 +28,7 @@
       {{#if this.report}}
         <Documents::DocumentCard
           @piece={{this.report}}
+          @isEditable={{true}}
           @hideNewerVersions={{true}}
           @onOpenUploadModal={{@onOpenUploadModal}}
           @onAddPiece={{this.attachNewReportVersion}}
