--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -4,6 +4,7 @@
       <Documents::DocumentCard
         @piece={{doc}}
         @isHighlighted={{includes doc @highlightedPieces}}
+        @isEditable={{@isEditable}}
         @hideNewerVersions={{false}}
         @didDeleteContainer={{@didDeleteContainer}}
         @onOpenUploadModal={{@onOpenUploadModal}}
