--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -44,6 +44,7 @@
       @didDeleteContainer={{this.refresh}}
       @markForSignature={{this.markForSignature}}
       @unmarkForSignature={{this.unmarkForSignature}}
+      @isEditable={{true}}
     />
   {{else}}
     <div class="auk-u-mt-2">
