--- a/app/templates/cases/case/subcases/subcase/documents.hbs
+++ b/app/templates/cases/case/subcases/subcase/documents.hbs
@@ -40,6 +40,7 @@
           @pieces={{this.model.pieces}}
           @onAddPiece={{perform this.addPiece}}
           @didDeleteContainer={{this.refresh}}
+          @isEditable={{true}}
         />
       {{else}}
         <div class="auk-u-mt-2">
