KAS-3696 WIP refactor profile tests
moved setup to zip, created command for reused functions, used new setup for profile test in 4 spec files already

--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -16,6 +16,7 @@
       {{#if @showDragHandle}}
         <div class="vlc-agenda-items__cursor">
           <AuIcon
+            data-test-agenda-overview-item-dragging
             class="auk-u-cursor-grab auk-u-text-muted"
             @icon="drag-handle-2"
             @size="large"
