--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -105,7 +105,7 @@
                     {{#if this.markOrUnmarkForSignature.isRunning}}
                       <Auk::Loader />
                     {{else}}
-                      Te handtekenen
+                      {{t "to-sign"}}
                     {{/if}}
                   </label>
                 </div>
