--- a/app/templates/agenda/documents.hbs
+++ b/app/templates/agenda/documents.hbs
@@ -14,6 +14,7 @@
             <Group.Item>
               {{#if (user-may "manage-documents")}}
                 <AuButton
+                  data-test-route-agenda-documents-batch-edit
                   @icon="pencil"
                   {{on "click" this.openBatchDetails}}
                 >
