update search on publications

--- a/app/styles/prototype/_search.scss
+++ b/app/styles/prototype/_search.scss
@@ -44,6 +44,10 @@
   height: calc(100vh - 50px);
 }
 
+.au-c-search-container--publications {
+  height: calc(100vh - 100px);
+}
+
 .au-c-search-container__header {
 
 }
