Remove unnecessary await in vl-mandatees-column

--- a/app/components/web-components/vl-mandatees-column.hbs
+++ b/app/components/web-components/vl-mandatees-column.hbs
@@ -5,7 +5,7 @@
     {{#if (is-pending mandatee.person)}}
       <div class="auk-skeleton auk-skeleton--rectangle" role="alert" aria-busy="true"></div>
     {{/if}}
-    {{await mandatee.person.fullName}}
+    {{mandatee.person.fullName}}
     <br />
   {{/each}}
 {{else}}
